--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,6 +5,8 @@ button:
   home: Home
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
+  reload_now: Reload now
+  close: Close
 intro:
   desc: Opinionated Vite Starter Template
   dynamic-route: Demo of dynamic route
@@ -12,3 +14,12 @@ intro:
   aka: Also known as
   whats-your-name: What's your name?
 not-found: Not found
+label: 
+  offline_ready: The application is ready to work offline.
+  new_content: New content available, click on the reload button to update.
+  close_in: Close in
+  reload_in: Reload in
+unit: 
+  second: second | seconds
+
+
