--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,23 +1,64 @@
 button:
   about: About
+  account_settings: Account settings
   back: Back
+  close: Close
+  dashboard: Dashboard
   go: GO
   home: Home
+  reload_now: Reload now
+  short_that_url: Short that URL
+  sign_in: Sign in
+  sign_out: Sign out
+  sign_up: Sign up
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
-  reload_now: Reload now
-  close: Close
-  login: Login
-  logout: Logout
 
 label: 
-  offline_ready: The application is ready to work offline.
-  new_content: New content available, click on the reload button to update.
+  'no': No
+  'yes': Yes
+  about: About
+  actions: Actions
+  already_account_question: Don have an account already?
+  blog: Blog
   close_in: Close in
-  reload_in: Reload in
+  contact: Contact
+  copied_success: "{url} copied successfully"
+  copy: Copy
+  delete_question: Delete this URL?
+  delete: Delete
+  deleted_success: "{url} deleted successfully"
+  email_address: Email address
+  email: Email
+  expiration_time: Expiration time
+  first_name: First name
+  go_to: Go to
+  invalid_email: Invalid email
+  is_required: Is required
+  last_name: Last name
+  main_phrase: It's easy to get tired of long URLs. It's a pain to have to write a link as long as a book. For this and more, shorten your URLs and everything will be better.
+  new_content: New content available, click on the reload button to update.
+  no_account_question: Don't have an account yet?
   not-found: Not found
+  offline_ready: The application is ready to work offline.
+  page_name: Page name
+  password_placeholder: An amazing password... like "password"
+  password: Password
+  reload_in: Reload in
+  short_name: Short name
+  shorted_success: URL shorted successfully
+  show_picture: Show picture
+  show_table: Show table
+  signed_in_as: Signed in as
+  signed_in_success: Signed in successfully
+  source_code: Source code
+  still_valid: Still valid for
+  to_access: to access your account
+  visits: Visits
+  
 
 unit: 
+  day: day | days
   second: second | seconds
 
 
