refactor: :globe_with_meridians: page 404 translated
Signed-off-by: Rubén Conde <ruben.conde@ux-key.com>

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -13,6 +13,7 @@ button:
   sign_up: Sign up
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
+  go_home: Go home
 label:
   about: About
   actions: Actions
@@ -57,6 +58,9 @@ label:
   to_access: to access your account
   visits: Visits
   'yes': 'Yes'
+  error_404: Error 404
+  page_not_found: Page not found
+  not_found_text: The page you’re looking for doesn’t exist. 
 unit:
   day: day | days
   second: second | seconds
