fix: :globe_with_meridians: Translation fix
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/locales/es.yml
+++ b/locales/es.yml
@@ -1,6 +1,6 @@
 button:
   about: Acerca de
-  account_settings: Configuración de la cuenta
+  account_settings: Configuración
   back: Volver
   close: Cerrar
   dashboard: Panel
