style: :lipstick: Path name animation
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -67,6 +67,9 @@ label:
   still_valid: Still valid for
   to_access: to access your account
   visits: Visits
+path: 
+  dashboard: Dashboard
+  settings: Settings
 unit:
   day: day | days
   second: second | seconds
