--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -69,6 +69,9 @@ label:
   to_access: pour accéder à votre compte
   visits: Visites
   'yes': Oui
+path:
+  dashboard: Tableau de bord
+  settings: Paramètres
 unit:
   day: jour | jours
   second: seconde | secondes
