--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,6 +5,7 @@ button:
   close: Close
   dashboard: Dashboard
   go: GO
+  go_home: Go home
   home: Home
   reload_now: Reload now
   short_that_url: Short that URL
@@ -13,28 +14,25 @@ button:
   sign_up: Sign up
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
-  go_home: Go home
 label:
-  'no': 'No'
-  'yes': 'Yes'
   about: About
   actions: Actions
   already_account_question: Don have an account already?
   blog: Blog
   cancel: Cancel
   close_in: Close in
-  confirm:  Confirm
+  confirm: Confirm
   contact: Contact
   copied_success: '{url} copied successfully'
-  copy_fail: '{url} copy failed'
   copy: Copy
+  copy_fail: '{url} copy failed'
+  delete: Delete
   delete_question: Are you sure you want to delete this URL?
   delete_suggestion: This cannot be undone after confirmation.
-  delete: Delete
   deleted_fail: '{url} deletion failed'
   deleted_success: '{url} deleted successfully'
-  email_address: Email address
   email: Email
+  email_address: Email address
   error_404: Error 404
   expiration_time: Expiration time
   first_name: First name
@@ -47,17 +45,18 @@ label:
     long as a book. For this and more, shorten your URLs and everything will be
     better.
   new_content: New content available, click on the reload button to update.
+  'no': 'No'
   no_account_question: Don't have an account yet?
-  not_found_text: The page you’re looking for doesn’t exist. 
   not_found: Not found
+  not_found_text: The page you’re looking for doesn’t exist.
   offline_ready: The application is ready to work offline.
   page_name: Page name
   page_not_found: Page not found
-  password_placeholder: An amazing password... like "password"
   password: Password
+  password_placeholder: An amazing password... like "password"
   reload_in: Reload in
   short_name: Short name
-  shorted_fail: 'URL shorting failed'
+  shorted_fail: URL shorting failed
   shorted_success: URL shorted successfully
   show_picture: Show picture
   show_table: Show table
@@ -67,9 +66,11 @@ label:
   still_valid: Still valid for
   to_access: to access your account
   visits: Visits
-path: 
-  dashboard: Dashboard
-  settings: Settings
+  'yes': 'Yes'
+path:
+  /: Default
+  /dashboard: Dashboard
+  /settings: Settings
 unit:
   day: day | days
   second: second | seconds
