--- a/locales/es.yml
+++ b/locales/es.yml
@@ -70,8 +70,9 @@ label:
   visits: Visitas
   'yes': Sí
 path:
-  dashboard: Panel de control
-  settings: Ajustes
+  /: Por defecto
+  /dashboard: Panel de control
+  /settings: Ajustes
 unit:
   day: día | días
   second: segundo | segundos
