--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -70,8 +70,9 @@ label:
   visits: Visites
   'yes': Oui
 path:
-  dashboard: Tableau de bord
-  settings: Paramètres
+  /: Défaut
+  /dashboard: Tableau de bord
+  /settings: Paramètres
 unit:
   day: jour | jours
   second: seconde | secondes
