--- a/locales/es.yml
+++ b/locales/es.yml
@@ -65,7 +65,7 @@ label:
   signed_in_as: Sesión iniciada como
   signed_in_success: Inicio de sesión exitoso
   source_code: Código fuente
-  still_valid: Válido durante
+  still_valid: Expira en
   to_access: para acceder a su cuenta
   visits: Visitas
   'yes': Sí
