--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -65,7 +65,7 @@ label:
   signed_in_as: Connecté en tant que
   signed_in_success: Connecté avec succès
   source_code: Code source
-  still_valid: Toujours valable pour
+  still_valid: Expire dans
   to_access: pour accéder à votre compte
   visits: Visites
   'yes': Oui
