feat: :sparkles: Sign in info dialog
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -61,6 +61,9 @@ label:
   shorted_success: URL shorted successfully
   show_picture: Show picture
   show_table: Show table
+  sign_in_info_title: Valid time for urls
+  sign_in_info_main: Links created from outside an account are only valid for 90 days. It is recommended to have an account to keep the links active indefinitely.
+  sign_in_info_suggestion: If you have shortened links on the page and they are present in the general table, when logging in or registering they will be automatically added to the account that enters the system.
   signed_in_as: Signed in as
   signed_in_success: Signed in successfully
   small_screen_url_msg: It looks like you have already some shortened links.
