--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -63,6 +63,15 @@ label:
   shorted_success: URL raccourcie avec succès
   show_picture: Voir la photo
   show_table: Afficher la table
+  sign_in_info_main: >-
+    Les liens créés en dehors d'un compte ne sont valables que pendant 90 jours.
+    Il est recommandé d'avoir un compte pour que les liens restent actifs
+    indéfiniment.
+  sign_in_info_suggestion: >-
+    Si vous avez des liens raccourcis sur la page et qu'ils sont présents dans
+    le tableau général, lors de la connexion ou de l'enregistrement, ils seront
+    automatiquement ajoutés au compte qui entre dans le système.
+  sign_in_info_title: Durée de validité des urls
   signed_in_as: Connecté en tant que
   signed_in_success: Connecté avec succès
   small_screen_url_msg: Il semble que vous ayez déjà des liens raccourcis.
